--- a/views/index.erb
+++ b/views/index.erb
@@ -2,70 +2,26 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Colors</title>
-   <script src='lib/jquery.js'></script>
-  <script src='src/scripts.js'></script>
+  <title>Sinatra Colors</title>
 
-  <style type="text/css">
-  .color-list {
-    margin: 20px 15px; 
-    float: left;
-  }
+  <link rel="stylesheet" href="css/style.css">
 
-  .color-list li {
-    width: 80px;
-    height: 100px;
-    display: inline-block;
-    text-align: center;
-    color: #ccc;
-  }
+  <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+  <script src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+  <link href='http://fonts.googleapis.com/css?family=Limelight|Pacifico' rel='stylesheet' type='text/css'>
 
-  .color-list li span {
-    display: block;
-    margin-top: 45%;
-  }
-
-  body {
-    font-family: 'Helvetica';
-    margin: 0;
-    padding: 0;
-    position: relative;
-    min-height: 600px;
-    overflow: scroll;
-  }  
-
-  a {
-    text-decoration: none;
-    color: #1A82BD;
-  }
-
-  .fill-color {
-    width: 20%;
-    height: 600px;
-    float: left;
-  }
-
-  .center {
-    position: absolute;
-    z-index: 1;
-    margin: 4% 35%;
-    width: 30%;
-    text-align: center;
-  }
-
-  .fill {
-    width: 100%;
-    height: 100%;
-  }
-  </style>
+  <script src='src/script.js'></script>
 </head>
 
 <body>
+  <nav>
+    <button class="view">Saved Color Palettes</button>
+    <button class="save">Save this Palette</button>
+  </nav>
+
   <div class="center">
-    <button class="button-palettes">Unleash Palette Buttons</button>
-    <button class="new-palettes">Unleash the Palettes</button>
-    <button class="random-palette">Unleash Palette</button>
-    <div class="fill-name"></div>
+    <h1 class="fill-name"></h1>
+    <button class="next-palette">Next Palette</button>
   </div>
 
   <div class="fill">
