--- a/views/show.erb
+++ b/views/show.erb
@@ -14,18 +14,9 @@
 </head>
 
 <body>
-  <div class="top">
-    <nav>
-      <a href='/palettes' class="view">All Color Palettes</a>
-      <a href='#' class="save">Save this Palette</a>
-    </nav>
 
-    <button class="next">Next Palette</button>
-    <h1 class="name"></h1>
+  <div class="color-list">
   </div>
-
-  <div class="fill"></div>
-  <div class="palettes"></div>
 
 </body>
 </html>
