--- a/views/show.erb
+++ b/views/show.erb
@@ -15,7 +15,7 @@
 
 <body>
   <nav>
-    <a href='/palettes' class="view">Discover Palettes</a>
+    <a href='/' class="view">Discover Palettes</a>
   </nav>
 
   <div class="wrapper">
